tests/syntax-error/syntax-error.ex
publ1367A&#^&*^#b134
